--- a/subgraphs/erc20/protocols/erc20/config/templates/erc20.template.yaml
+++ b/subgraphs/erc20/protocols/erc20/config/templates/erc20.template.yaml
@@ -95,3 +95,34 @@ dataSources:
       eventHandlers:
         - event: Mint(indexed address,uint256)
           handler: handleMint
+  - name: OmnichainToken
+    kind: ethereum
+    network: mainnet
+    source:
+      abi: OFTV2
+      address: "0x9e20461bc2c4c980f62f1B279D71734207a6A356"
+      startBlock: 18831524
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - Token
+        - TokenDailySnapshot
+        - TokenHourlySnapshot
+        - BridgeTransferEvent
+      abis:
+        - name: ERC20
+          file: ./abis/ERC20.json
+        - name: Mintable
+          file: ./abis/Mintable.json
+        - name: Burnable
+          file: ./abis/Burnable.json
+        - name: OFTV2
+          file: ./abis/OFTV2.json
+      eventHandlers:
+        - event: SendToChain(indexed uint16,indexed address,indexed bytes32,uint256)
+          handler: handleSendToChain
+        - event: ReceiveFromChain(indexed uint16,indexed address,uint256)
+          handler: handleReceiveFromChain
